added more text to About Me-modified stylesheet-added profile picture

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,9 @@ h1 {
     font-size: 30px;
     color:white;
     letter-spacing: 4px;
+
 }
+
 
 nav {
     width: 50%;
@@ -103,7 +105,10 @@ main {
     margin-top: 20px;
 }
 
-#contact-link {}
+#contact-link {
+    display: flex;
+    margin-bottom: 35px;
+}
 
 .header {
     background-color: white;
@@ -119,19 +124,37 @@ main {
 
 .about-me-content {
     background: white;
-    width: 75%;
-    display: inline-block;
+    width: 74%;
+    display: block;
     text-align: left;
-    padding: 20px;
-    margin: 15px;
+    padding: 10px;
+    margin-left: 15px;
+    margin-top: 0 ;
 }
+
+
+.pfp-img {
+    display: flex;
+    width: 140px;
+    height: 20%;
+    border-radius: 5px;
+    margin-left: 45%;
+    margin-top: 15px;
+
+}
+
+
 
 .resume-img, .linkedin-img {
     background: white;
     display: inline-block;
     padding: 20px;
-    margin:10px;
+    margin: 25px;
+    border: 5px solid grey;
+
+
 }
+
 
 .content {
     background: white;
