--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,6 +111,7 @@ main {
 }
 
 .header {
+    color: #1c83dcd9;
     background-color: white;
     font-size: 40px;
     display: flex;
@@ -124,11 +125,11 @@ main {
 
 .about-me-content {
     background: white;
-    width: 74%;
+    width: 70%;
     display: block;
-    text-align: left;
+    text-align: center;
     padding: 10px;
-    margin-left: 15px;
+    margin-left: 20px;
     margin-top: 0 ;
 }
 
