--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -107,7 +107,7 @@ main {
 
 #contact-link {
     display: flex;
-    margin-bottom: 35px;
+    margin-bottom: 55px;
 }
 
 .header {
@@ -125,33 +125,38 @@ main {
 
 .about-me-content {
     background: white;
-    width: 70%;
+    width: 75%;
     display: block;
-    text-align: center;
+    text-align: left;
     padding: 10px;
     margin-left: 20px;
     margin-top: 0 ;
 }
 
 
+
 .pfp-img {
-    display: flex;
+    display: block;
     width: 140px;
     height: 20%;
-    border-radius: 5px;
-    margin-left: 45%;
-    margin-top: 15px;
+    border-radius: 15px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    
 
 }
 
 
 
 .resume-img, .linkedin-img {
+    align-self: center;
     background: white;
     display: inline-block;
     padding: 20px;
     margin: 25px;
     border: 5px solid grey;
+    border-radius: 10px;
 
 
 }
@@ -168,10 +173,16 @@ main {
 
 
 .css-img {
+    display: block;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    border: 5px solid #767b91; 
+    border-radius: 10px;
 
-    max-width: 100%;
+    /* max-width: 100%;
     max-height: auto;
-    border: 5px solid #767B91;
+    border: 5px solid #767B91; */
 }
 
 .content img:hover {
@@ -192,6 +203,24 @@ main {
     padding: 15px;
 }
 
+#textButton {
+    background-color: none;
+    border: none;
+    margin: 5px;
+    width: fit-content;
+    height: 30%;
+    margin-top: 40px;
+    margin-bottom: 10px;
+    margin-left: 20px;
+    border-radius: 10px;
+
+
+}
+#textButton:hover{
+    background-color: rgb(28, 122, 193);
+
+}
+
 ul {
     display: flex;
     flex-wrap: wrap;
@@ -209,7 +238,7 @@ ul li {
     color: #2A324B;
     margin: 15px;
     height: 100px;
-    padding: 20px;
+    padding: 0px;
 }
 
 @media screen and (max-width:928px) {
