--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -173,16 +173,16 @@ main {
 
 
 .css-img {
-    display: block;
+    /* display: block;
     width: 100%;
     margin-left: auto;
     margin-right: auto;
     border: 5px solid #767b91; 
-    border-radius: 10px;
+    border-radius: 10px; */
 
-    /* max-width: 100%;
+    max-width: 100%;
     max-height: auto;
-    border: 5px solid #767B91; */
+    border: 5px solid #767B91;
 }
 
 .content img:hover {
@@ -213,6 +213,9 @@ main {
     margin-bottom: 10px;
     margin-left: 20px;
     border-radius: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
 
 
 }
